@@ -1,31 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX htpdate.conf 359 SHA256 cfcf98a0b41e4d5c8c04a72443bbb0c335b91db252d35e0050b82fca0682129b SHA512 28940548bb15484430cbc63d16eeb03934e6de82cb9729e85450f595712be9caf96e1cb84c55d17dd05f33661c2b657d76bfa8b40a3e0f649a0070aeb8be678b WHIRLPOOL a0fcdfe7700d799d3e7ba693239a413db0438d6dfe850f3e7053bee82a1c508da624e027026533b134dbf8b81b120bc28ce98cc320101a7ab0c0fb08036ea64c
-AUX htpdate.init 654 SHA256 effbc3de18ddcfffc5c0e4eee1f15e2828f036e9fbe66899f1e0b7b2481f265a SHA512 3dc52896bd120d79c803ac20ed87a05f90b09a1e431eeacb8b561304e59df175f9602c881d9a83773bbfabe3ad75f9ec24676973cf10c35ec9b782351ab82298 WHIRLPOOL aa97359be85be463380ececc67e55e94355ae038158b61b2a3f982edb2687a4842a1cbfc83ddb4f70c724bf3e31c86512dd205f5fb8569c0edfcd75395b9c3ae
 AUX htpdate.init-r1 621 SHA256 4e39260c5a37e608b0d0c6a91281e2cf5f3c483b5d17bee4f3ae3da753765fee SHA512 4af401f8bcb958f46de930c24ea44e06a2529d80a589710058faf602f98ec74052c32c1cfa2908a2589521c8756a7e170e804a685d2d995feffff0f49e39296f WHIRLPOOL 62684ef055a2faee7cc001bc8529128f999983fe52b7c95b7f0b32bc550962a2bdc1d0092867933e704a56f15e9f33d728470089d91e1d83fc06582840d521bf
-DIST htpdate-1.0.4.tar.gz 16474 SHA256 8c59b3f66a429eb3be038f66eb9f942398fca9002fe2c3f027010c815f91dedd SHA512 062d0fc9619312ad87dd0e508400bd6f3d64e0a7fab3bb58c55ccdbfb171030dc25f5909b0ca6d37b28e39eeb67c020e6b1c67017f8c16ef54c0e5f671bc2fb1 WHIRLPOOL 3e08faedf98201668bc387da9c1d2f2c5ed33bb55f5082b23f2754ad981b1a60295c030046b62100b4a0080be075d38b3c11c940156fb5255effe8a980c8731a
-DIST htpdate-1.0.5.tar.gz 16579 SHA256 f465059495eae91437eb5eec7af92f1374eb3836f50926e8e5718818abf91e9a SHA512 fc4c01f08b59ff1d0335d8a16248106f97146dcf98031dda6023f500e3451e251bb3ea7f17bfe4309b3a1c6c9c89e62452fa4a458015e2b9a90e0ccb20e51de2 WHIRLPOOL aa7322ce08f4356a721d37f130aa6015a434fc1d6c80b6992ea08926705a6c5b0f2f3625c7b350202fcb624d3c4d3d59e1afbd857b24121edd282e5a47c2494b
 DIST htpdate-1.0.7.tar.gz 16848 SHA256 ba0b3f7b42306f2e2e146624785f80cc472eac9e7885007df50af0e1a21735c4 SHA512 83408545d1d2cc794f62efaf348e54cc2ce47dfb27815710e92d0c7d34360a581e637ef82424030c8a4fcabcc9a07205518fac08f426b37c7c4519cfa6696360 WHIRLPOOL e2e949d20b8d4afecd6c3c09aefa203417b16a4061e6d2fe05cf5e37d0dc736604ed5e1f0d8c03146eb3b5031ffc3ed8ec3213171513e6140a098bd1d5f268fb
-EBUILD htpdate-1.0.4.ebuild 1016 SHA256 89ab6683a9a53c3f5b12d4f126aa820c56987ed3ce886b59e36762f6544ed636 SHA512 51a540ffcb0b804d1fc1f819aa62285e766bf5190d769e2b015ef987a4529ce4ec7e7a0035397ac45ec488a09804aba55a01110927f7cdf38b041aa8e6f8863a WHIRLPOOL a8da0009bba4e724be60fd751cc45b2b1b07537f3ba523f50188d1d2d0007d72b9a87a688e22de5d983d7d54ffc41881ecada7cccb874616bbc133af13a7dc38
-EBUILD htpdate-1.0.5.ebuild 1117 SHA256 9941e46a3b6f039e98a6a56db910edec6938247b82a9410b836a88f55c97c744 SHA512 18fc39083e220f3454bec14eff18afe2b2cdad5e299ca3b656445b6f340c2ca640fcb02184ecbf04423bb80bbdfd3796a77ec93e373d137590d285723853a9a0 WHIRLPOOL 87360839c322c4ed3a9feffe3c52af7ce0053196d87e56b1a951d2dcc3b4774fb4f90a89bacc4bfba4c0a381c56dc28b48ee31ad65b09b593a590e07e7e52b35
+DIST htpdate-1.1.1.tar.gz 13303 SHA256 6fca5f13e323d4bf8e4a2ae20dfaae527b745b3cf19e9aeccfe2f211e7cc7a7a SHA512 bfc463692b7c4fb962c0b6f34e6063d2506e383490e6d6972b7da3740fbd0b835a07cddd3470bea29f8d2770160fba5f87fd3d768cb27a1f04ea9f5a39522918 WHIRLPOOL 7faa7ce4dd96d48a2a7ddc20a61a7230d9658042f3c9e39229ade41a312d78a0d5827a3348b2671de36fdbcb0aa35873fa5bee6e0c13218e94fbc23f3f2730b7
 EBUILD htpdate-1.0.7.ebuild 1242 SHA256 de126677973dcfb2bc145af8493884f808b024e903b799400fc8c757669799fb SHA512 1ebfd0f7a4d52a5b368c2a757608f5e54dee06533e5033f06ba175d569b4c832fdf614ffcaf86ad8f4cd0f4c698126246ae285afe67aa60983d4348bf4802a15 WHIRLPOOL c39e1281975cf6988d365573c2156ad375ccf39500d6b8c435d02d3b25f340f9913a8e40bae7f998a6d99c0a50f2da154008db5f73129bebc216505b6c1d38bb
-MISC ChangeLog 7307 SHA256 1542739cd8d1e17bb3fb910badd9ce5914c902ab821e234f12f1c4fb386fe039 SHA512 b91f3c4df7ffdd0aec812e0a859e690b30e38fd0368556d919190cf526a2b05b1d52e1a4c82b2f2c32c44fdf28c69c8003a39f214dffef7e4930d650fcdc189c WHIRLPOOL 5fe7d2e0dc4063cf6141e09ef973bf54d4272b8459541381ab296547c37151a423be9ab45125bbac6a12615a92ac094386bcf291cd1137b82933b7b462b40740
+EBUILD htpdate-1.1.1.ebuild 1153 SHA256 4159fa5ca5c3c52e8b146d58d0b9f2306ed63ed0c9e5d5d0913ba37901b1dabb SHA512 108ae772f5920df886807073b5c46d245d04f259761c601e327f6fe940ac86bd738f6b8ee603b7882622bf1fb3a8886bf4e09cbcc60b3e6bc985e450d8b5aba8 WHIRLPOOL d7c0caa0bc81bcfa0943e1ee0c0710629a7f8b1e9a548e416d81915255554654108f5b3f5f69e56adad367ace00b93b8199fcb0391a98f594dc9e19d7d3af6aa
+MISC ChangeLog 7519 SHA256 8fd1552d7471a734964323a9d6fc3f52813ce669dd4d64abb4a08b577c23afec SHA512 53e9dd920abf3ba0cfb394163fe0ed4b1d880493029a46c0e80f480d7652d81773f019a4859bfc451b39aa502a1443e62c2ce8a9ee78a735f2e1cbb2c6163885 WHIRLPOOL 41cfb94cc5251d4f700d89523fec038c5d2b123a9de3ccfe135102138560a2bd90cc223a35195eb63cbe07a70064f8f5518a6194fdd584b1478b503885c9caea
 MISC metadata.xml 237 SHA256 529fccf44304d88c69ae1fe99b0e92b0a02ace758a8b5b05efffa29cb9c6bdf3 SHA512 54d0207e9fba901b74989bd9e9cf1fe1f3675308bf1bff3717911245f8b13dcf83cde72446c2ed581fd39abbd4c134d042fd015f9b658bcb0d79d7870c7ac32d WHIRLPOOL 7c5a1a83814f658bd2e678165fc3b071fe2b40a578e37d74e6861682f31d46ce5271c1833ae962dd213f058b686569a1fbad75346078b3cbed460ca1a7731c53
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJS2lnEAAoJEPGu1DbS6WIALygP/3gsxJoToNIL2PYsArYcYhte
-dd2do+f9rCPMBYYTe5nwZAxhB/HSFA6jFK3fbEEz95QJmfT2T67VMjnM+r7dS464
-kWZa96XRq0X4KZI8caqN6AReMzezYxMx78hplmCqQKcFMKMzVSLJEBz3PUcwd05o
-d6Y3KaFAQp/SyykHaS/yY1XU5nf0oOU5+enIhZAothOVedpMVCk5EYAMdBGL8VEN
-mPJ2lUWDP6TbZcbXxdESZJ0OYmzj5Q1i+CwIdOHTQCB5QEdDdv8dp4xWc4p2aTz8
-jhifQaVIvftXYsuMuR500pbHUPs3WrA/TsNaQq3It2KG35g0GqbN6B7GBRzqWqD6
-SMruMRTP1CRPHHV4djCy6xBX7nNDcFRnxrdYi0/pRl5p9mI1/mDmfIYon3KTVzd2
-dyqpWJkEygGzvj8ws6o8MhemHTK4I1ZfJwLVScTTYUdWiE1pgEP6nBlUuExNIyIe
-7kHWAyMzoID+SFKgYOLSc2ylkftPmt84EmpI9I8IPEE/RGg+ZY+/N5qM+usDUtRS
-qj4cUBiLwaihptKjT2y63rM4mHSRx9Xiq6HMLgZj8jDfgdNugHca56i3oFo53OHr
-iV7oZiGv/bIUuDQ5a+lp1lqgA/cQlmTmhE3EfI8xXcIPqu4eFv5ojCmHLdbUAVc/
-Vn198i7gty3UC8R1PoW1
-=pHwl
+iQIcBAEBCgAGBQJVs/w3AAoJEPiazRVxLXTFsCgP/14odj1lNjCkhD356kaDUN+k
+cszTMfvPrkuA5+qz6vj6i3hxbo1s+M0oX2gLQAcrEiaR003ooEFUpZZr7aKmz65C
+ARBQV+Kez8EcA2A89lffZXjonaVe0q9Q0mat8UUui7MLgi1VrhFx5NBmmD87GrXH
+WrXtY9Ljq7zO37ekvHGDqKK7u4QXfycId0J/w36nD9e27HiSqycGipNYPTb+nUQ4
+pDkCDZ8Gcd5wA8k8DRCfoFK3ALkxjossnybX1k05X+Grq+9EFI4XRTMr14PqDhRf
+X2VBdYRQRR9UUwxEqzLY3cVNSnMZqrkLYVJx+A4312C01s5ljVFpAvftr+CYNbhM
+Ggy6HtHGs7JRxPtam7PcKQ2eaOpELwMGV9LxGApLqkw/+CCO5NPb7VwX8jTXCo+x
+W0JkvWVQd8BUAuHtONxfKVoG/46JjeUb5GEcaQUd3325L7JRKiNsmTdKPfzptXeH
+rQII/QvPjmGiRgTco0q9hFVBBavXPwxSF2Jmsm/Oe0FVUfEFaQXSIfo45bU4qmPP
+HumXXuUQZ98itauFDNJa/LkmuOGNoFGGwHBGT1YXHIUCkMYIITGD8DrJi1usbFI9
+Qx/i79uwGw9UbvBlf+mK9zhomzvvBihwpsPcnJimp9yWow9e4CndhjaAgSatVtwF
+EwclIm4AS3A/qVBuj2AL
+=fpqg
 -----END PGP SIGNATURE-----
