@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/htpdate/htpdate-1.0.5.ebuild,v 1.2 2013/08/12 07:50:18 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/htpdate/htpdate-1.1.1.ebuild,v 1.1 2015/07/25 21:14:29 polynomial-c Exp $
 
 EAPI=5
 
@@ -12,7 +12,7 @@ SRC_URI="http://www.vervest.org/htp/archive/c/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~mips ~ppc ~ppc64 ~s390 ~sh ~x86 ~amd64-linux ~x86-linux"
+KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~mips ~ppc ~ppc64 ~s390 ~sh ~x86 ~amd64-linux ~x86-linux"
 
 DEPEND=""
 RDEPEND=""
@@ -20,11 +20,9 @@ RDEPEND=""
 DOC_CONTENTS="If you would like to run htpdate as a daemon, set
 appropriate http servers in /etc/conf.d/htpdate!"
 
-src_unpack() {
-	default
-
-	cd "${S}" || die "change directory to ${S} failed"
-	unpacker htpdate.8.gz
+src_prepare() {
+	# Use more standard adjtimex() to fix uClibc builds.
+	sed -i 's:ntp_adjtime:adjtimex:g' htpdate.[8c] || die
 }
 
 src_compile() {
