@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/htpdate
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/htpdate/ChangeLog,v 1.56 2014/01/18 10:38:58 vapier Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/htpdate/ChangeLog,v 1.57 2015/07/25 21:14:29 polynomial-c Exp $
+
+*htpdate-1.1.1 (25 Jul 2015)
+
+  25 Jul 2015; Lars Wendler <polynomial-c@gentoo.org> -htpdate-1.0.4.ebuild,
+  -htpdate-1.0.5.ebuild, +htpdate-1.1.1.ebuild, -files/htpdate.init:
+  Version bump. Removed old.
 
   18 Jan 2014; Mike Frysinger <vapier@gentoo.org> htpdate-1.0.7.ebuild:
   Add arm64 love.
